Removed Java 9 Dependency and fixed a few problems with the testing module